Adding support for listing networks Added network service client Fixed comments and typos.
Partially implements blueprint support-compute-api
Change-Id: I36fa7df2c4b707ec49250030caf9adc7f068484a

--- a/OpenStack/OpenStack.Test/OpenStack.Test.csproj
+++ b/OpenStack/OpenStack.Test/OpenStack.Test.csproj
@@ -82,6 +82,13 @@
     <Compile Include="Identity\OpenStackServiceCatalogTests.cs" />
     <Compile Include="Identity\IdentityServiceClientDefinitionTests.cs" />
     <Compile Include="Identity\OpenStackRegionResolverTests.cs" />
+    <Compile Include="Network\NetworkServiceClientTests.cs" />
+    <Compile Include="Network\NetworkServicePocoClientTests.cs" />
+    <Compile Include="Network\NetworkPayloadConverterTests.cs" />
+    <Compile Include="Network\NetworkRestSimulator.cs" />
+    <Compile Include="Network\NetworkServiceRestClientTests.cs" />
+    <Compile Include="Network\TestNetworkServicePocoClient.cs" />
+    <Compile Include="Network\TestNetworkServiceRestClient.cs" />
     <Compile Include="RestSimulator.cs" />
     <Compile Include="ServiceLocation\ServiceLocationAssemblyScannerTests.cs" />
     <Compile Include="ServiceLocation\ServiceLocatorTests.cs" />
