--- a/OpenStack/OpenStack/OpenStack40.csproj
+++ b/OpenStack/OpenStack/OpenStack40.csproj
@@ -109,6 +109,21 @@
     <Compile Include="IOpenStackServiceClient.cs" />
     <Compile Include="IOpenStackServiceClientDefinition.cs" />
     <Compile Include="IOpenStackServiceClientManager.cs" />
+    <Compile Include="Network\INetworkServiceClient.cs" />
+    <Compile Include="Network\INetworkServicePocoClient.cs" />
+    <Compile Include="Network\INetworkServicePocoClientFactory.cs" />
+    <Compile Include="Network\NetworkPayloadConverter.cs" />
+    <Compile Include="Network\INetworkPayloadConverter.cs" />
+    <Compile Include="Network\INetworkServiceRestClient.cs" />
+    <Compile Include="Network\INetworkServiceRestClientFactory.cs" />
+    <Compile Include="Network\Network.cs" />
+    <Compile Include="Network\NetworkServiceClient.cs" />
+    <Compile Include="Network\NetworkServiceClientDefinition.cs" />
+    <Compile Include="Network\NetworkServicePocoClient.cs" />
+    <Compile Include="Network\NetworkServicePocoClientFactory.cs" />
+    <Compile Include="Network\NetworkServiceRestClient.cs" />
+    <Compile Include="Network\NetworkServiceRestClientFactory.cs" />
+    <Compile Include="Network\NetworkStatus.cs" />
     <Compile Include="OpenStackClient.cs" />
     <Compile Include="OpenStackClientFactory.cs" />
     <Compile Include="OpenStackClientManager.cs" />
