Adding support for creating and deleting servers
Partially implements blueprint support-compute-api
Change-Id: I316501936fc4536a95e8e645449d007aa72c0b78

--- a/OpenStack/OpenStack45-PCL/OpenStack45-PCL.csproj
+++ b/OpenStack/OpenStack45-PCL/OpenStack45-PCL.csproj
@@ -127,6 +127,9 @@
     <Compile Include="..\OpenStack\Compute\ComputeServer.cs">
       <Link>Compute\ComputeServer.cs</Link>
     </Compile>
+    <Compile Include="..\OpenStack\Compute\ComputeServerPayloadConverter.cs">
+      <Link>Compute\ComputeServerPayloadConverter.cs</Link>
+    </Compile>
     <Compile Include="..\OpenStack\Compute\ComputeServiceClient.cs">
       <Link>Compute\ComputeServiceClient.cs</Link>
     </Compile>
@@ -153,6 +156,9 @@
     </Compile>
     <Compile Include="..\OpenStack\Compute\IComputeItemMetadataPayloadConverter.cs">
       <Link>Compute\IComputeItemMetadataPayloadConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenStack\Compute\IComputeServerPayloadConverter.cs">
+      <Link>Compute\IComputeServerPayloadConverter.cs</Link>
     </Compile>
     <Compile Include="..\OpenStack\Compute\IComputeServiceClient.cs">
       <Link>Compute\IComputeServiceClient.cs</Link>
