--- a/OpenStack/OpenStack/OpenStack40.csproj
+++ b/OpenStack/OpenStack/OpenStack40.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Compute\ComputeItem.cs" />
     <Compile Include="Compute\ComputeItemMetadataPayloadConverter.cs" />
     <Compile Include="Compute\ComputeServer.cs" />
+    <Compile Include="Compute\ComputeServerPayloadConverter.cs" />
     <Compile Include="Compute\ComputeServiceClientDefinition.cs" />
     <Compile Include="Compute\ComputeServiceClient.cs" />
     <Compile Include="Compute\ComputeServicePocoClient.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Compute\IComputeImagePayloadConverter.cs" />
     <Compile Include="Compute\IComputeFlavorPayloadConverter.cs" />
     <Compile Include="Compute\IComputeItemMetadataPayloadConverter.cs" />
+    <Compile Include="Compute\IComputeServerPayloadConverter.cs" />
     <Compile Include="Compute\IComputeServiceClient.cs" />
     <Compile Include="Compute\IComputeServicePocoClient.cs" />
     <Compile Include="Compute\IComputeServicePocoClientFactory.cs" />
