Adding support for Assigning a floating ip to a server. Adding support for listing and getting servers. Adding support for releasing/deleting floating Ips.
Partially implements blueprint support-compute-api
Change-Id: Iaadf931a1ecc0d8202721b5a27630da6fef9479f

--- a/OpenStack/OpenStack/OpenStack40.csproj
+++ b/OpenStack/OpenStack/OpenStack40.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Compute\ComputeImage.cs" />
     <Compile Include="Compute\ComputeItem.cs" />
     <Compile Include="Compute\ComputeItemMetadataPayloadConverter.cs" />
+    <Compile Include="Compute\ComputerServerStatus.cs" />
     <Compile Include="Compute\ComputeServer.cs" />
     <Compile Include="Compute\ComputeServerPayloadConverter.cs" />
     <Compile Include="Compute\ComputeServiceClientDefinition.cs" />
