Adding support for listing key pairs. Adding support for creating servers with key pairs.
Partially implements blueprint support-compute-api
Change-Id: Ic6fbb384fd51d71c0b590c285d40e89857353ec0

--- a/OpenStack/OpenStack45-PCL/OpenStack45-PCL.csproj
+++ b/OpenStack/OpenStack45-PCL/OpenStack45-PCL.csproj
@@ -124,6 +124,12 @@
     <Compile Include="..\OpenStack\Compute\ComputeItemMetadataPayloadConverter.cs">
       <Link>Compute\ComputeItemMetadataPayloadConverter.cs</Link>
     </Compile>
+    <Compile Include="..\OpenStack\Compute\ComputeKeyPair.cs">
+      <Link>Compute\ComputeKeyPair.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenStack\Compute\ComputeKeyPairPayloadConverter.cs">
+      <Link>Compute\ComputeKeyPairPayloadConverter.cs</Link>
+    </Compile>
     <Compile Include="..\OpenStack\Compute\ComputerServerStatus.cs">
       <Link>Compute\ComputerServerStatus.cs</Link>
     </Compile>
@@ -159,6 +165,9 @@
     </Compile>
     <Compile Include="..\OpenStack\Compute\IComputeItemMetadataPayloadConverter.cs">
       <Link>Compute\IComputeItemMetadataPayloadConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenStack\Compute\IComputeKeyPairPayloadConverter.cs">
+      <Link>Compute\IComputeKeyPairPayloadConverter.cs</Link>
     </Compile>
     <Compile Include="..\OpenStack\Compute\IComputeServerPayloadConverter.cs">
       <Link>Compute\IComputeServerPayloadConverter.cs</Link>
