--- a/OpenStack/OpenStack/OpenStack40.csproj
+++ b/OpenStack/OpenStack/OpenStack40.csproj
@@ -55,11 +55,13 @@
     <Compile Include="Common\ServiceLocation\ServiceLocator.cs" />
     <Compile Include="Common\StreamExtentions.cs" />
     <Compile Include="Compute\ComputeFlavor.cs" />
+    <Compile Include="Compute\ComputeKeyPairPayloadConverter.cs" />
     <Compile Include="Compute\ComputeImagePayloadConverter.cs" />
     <Compile Include="Compute\ComputeFlavorPayloadConverter.cs" />
     <Compile Include="Compute\ComputeImage.cs" />
     <Compile Include="Compute\ComputeItem.cs" />
     <Compile Include="Compute\ComputeItemMetadataPayloadConverter.cs" />
+    <Compile Include="Compute\ComputeKeyPair.cs" />
     <Compile Include="Compute\ComputerServerStatus.cs" />
     <Compile Include="Compute\ComputeServer.cs" />
     <Compile Include="Compute\ComputeServerPayloadConverter.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="Compute\ComputeServicePocoClientFactory.cs" />
     <Compile Include="Compute\ComputeServiceRestClient.cs" />
     <Compile Include="Compute\ComputeServiceRestClientFactory.cs" />
+    <Compile Include="Compute\IComputeKeyPairPayloadConverter.cs" />
     <Compile Include="Compute\IComputeImagePayloadConverter.cs" />
     <Compile Include="Compute\IComputeFlavorPayloadConverter.cs" />
     <Compile Include="Compute\IComputeItemMetadataPayloadConverter.cs" />
